--- a/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2.csproj
+++ b/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Shared\_myLayout.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.9" />
