--- a/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2.csproj
+++ b/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2/Enrico_Dreyer_Project2.csproj
@@ -126,7 +126,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9" />
-	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />	  
+	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+	<PackageReference Include="Swashbuckle.Core" Version="5.6.0" />	  
   </ItemGroup>
 
 </Project>
